fix word wrap in calendar

--- a/service/src/InstructorIQ.WebApplication/wwwroot/bundle.css
+++ b/service/src/InstructorIQ.WebApplication/wwwroot/bundle.css
@@ -15559,14 +15559,6 @@ a.text-dark:hover, a.text-dark:focus {
     border-bottom: 1px solid #6F6F6F;
     vertical-align: top;
     height: 20px;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-word;
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
 }
 
 .year-month-table {
@@ -16271,3 +16263,15 @@ fieldset.standard {
         font-size: 1em;
         font-weight: 600;
     }
+
+.word-wrap {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
